[gd_scene load_steps=15 format=2]

[ext_resource path="res://prefabs/SpriteShadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://shaders/enemy_shader.shader" type="Shader" id=3]
[ext_resource path="res://scripts/BossArea.gd" type="Script" id=4]
[ext_resource path="res://scripts/MonCat.gd" type="Script" id=5]
[ext_resource path="res://sprites/moncat_sprites.png" type="Texture" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/blink_color = Color( 1, 1, 1, 1 )
shader_param/blink_magnitude = 0.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 new_color : hint_color = vec4(0.13, 0.0, 0.32, 0.75);
//uniform vec2 offset = vec2(-3.0, 3.0);
// + vec2(cos(TIME) * UV.x * UV.y, UV.y * UV.x * sin(TIME)) * SCREEN_PIXEL_SIZE * 10.0

void fragment(){
	vec4 col = textureLod(TEXTURE, UV, 1.0);
	col.a *= new_color.a;
	col.rgb *= col.a;
	col.rgb = new_color.rgb;
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/new_color = Color( 0.13, 0, 0.32, 0.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22, 12 )

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "open_mouth"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 2, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_ghosts"
} ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 13 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20, 4 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 152, 112 )

[node name="MonCat" type="KinematicBody2D" groups=[
"enemy",
]]
material = SubResource( 1 )
position = Vector2( 472, 548 )
collision_layer = 0
collision_mask = 33
script = ExtResource( 5 )
max_life = 100.0
coins_to_spawn = 45
enemy_name = "Moncat"

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -1, -4 )
texture = ExtResource( 6 )
hframes = 4

[node name="Shadow" parent="Sprite" instance=ExtResource( 1 )]
material = SubResource( 3 )
texture = ExtResource( 6 )
offset = Vector2( 0, 0 )
hframes = 4
starting_position = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 5 )
anims/open_mouth = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
]]
visible = false
position = Vector2( -1, 0 )
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 8 )

[node name="BossArea" type="Area2D" parent="."]
position = Vector2( 8, -64 )
collision_mask = 3
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
visible = false
shape = SubResource( 9 )
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="BossArea" to="." method="_on_BossArea_body_entered"]
[connection signal="body_entered" from="BossArea" to="BossArea" method="_on_BossArea_body_entered"]
[connection signal="body_exited" from="BossArea" to="BossArea" method="_on_BossArea_body_exited"]
